feat: add animated logo, full-width layout, and complete fruit emoji system

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FruitFavs</title>
+    <title>FruitFavs - Discover Your Favorite Fruits</title>
+    <meta name="description" content="Explore and discover nutritional information about your favorite fruits" />
   </head>
   <body>
     <div id="root"></div>
